Increased PermGen size to fix OOME during test.